projects/compiler/test/parser/map_error_no_value.out
Error at %FILE_NAME%:1:8
Unexpected token ',':
  |  { abc: , def: 123 }
            ^